TextToSpeech: use io.micronaut.serde.ObjectMapper